SIP-1483 Java Based Connector Mapping (#200)
* Added API for java-based model mapping between connector- and scenario models (WIP)

* Switched transformation logic for mappers - no longer based on Camel's TypeConverters

* Updated ModelMapper interface and mapping logic to be more generic. Some other minor fixes and improvements.

* Small renamings annotations as per feedback from adapter developers

* Reduced Exception boilerplate

* Added (un-) marshalling to generic connector base classes, small API wording improvements for mappers

* Fixes to ModelMapper functionality

* SIP-1483|reducing sonar warinings

* SIP-1483|added integration test & small cleanups

* Add health check unit tests

---------

Co-authored-by: Martin Buchheim <martin.buchheim@ikor.one>
Co-authored-by: Leto Bukarica <leto.bukarica@gmail.com>
Co-authored-by: Nemikor <nemanja.nedeljkovic@ikor.de>